--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -49,6 +49,7 @@
                   <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                   <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                       <li><a href="allusers.html">All Users</a></li>
+                      <li><a href="allphotos.html">All Pictures</a></li>
                       <li><a href="#">Help</a></li>
                       <li><a href="AGB.html">AGB's</a></li>
                       <li role="separator" class="divider"></li>
@@ -63,7 +64,7 @@
 
     <div id="profile-picture"></div>
         <div id="upload-picture" align="center">
-           <span title="Upload picture"> <button id="uploadButton">+</button>  </span>
+            <span title="Upload picture"> <a href="http://localhost:8080/pictureUpload.html"><button id="uploadButton" >+</button></a>  </span>
         </div>
     <div id="usernamefield"></div>
 
