--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -1,18 +1,87 @@
 <!DOCTYPE HTML>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>AllUsers</title>
+    <link rel="icon" href="./images/Herzbeben_Logo.png">
+    <link rel="stylesheet" href="allusers.css" type="text/css">
+    <script type=text/javascript src = "navbarFunction.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script type=text/javascript src = "navbarFunction.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
+
+</head>
+
+<body>
+
+<header class="navbar navbar-inverse">
+    <nav role="navigation">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav"></ul>
+                <form class="navbar-form navbar-left">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
+                    <li><a href="compare.html">Compare Pictures</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li class="dropdown">
+                        <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                        <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="allusers.html">All Users</a></li>
+                            <li><a href="allphotos.html">All Pictures</a></li>
+                            <li><a href="#">Help</a></li>
+                            <li><a href="AGB.html">AGB's</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Sign out</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+</header>
 <!-- <form id="file-form" action="handler.php" method="POST">
     <input type="file" id="file-select" name="photos[]" multiple/>
     <button type="submit" id="upload-button">Upload</button>
 </form> -->
-
+<button class="helpBtn">Help
+    <span class="helpText">Please select the Picture you want to upload and click on "Upload Picture"!</span>
+</button>
 <body>
-<h1>File Upload with Jersey</h1>
+<h1>Picture Upload</h1>
 
 <form action="http://localhost:8080/meetme/api/photo/upload" method="POST" enctype="multipart/form-data">
     <p>Select a file : <input type="file" name="file" size="45"/></p>
-    <input type="submit" value="Upload It" />
+    <input type="submit" onclick="addpictodb()" value="Upload Picture" />
 </form>
+<script>
+    function addpictodb() {
 
+    }
+</script>
 </body>
+
+
 <!--
 <script>
     var form = document.getElementById('file-form');
