--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -55,6 +55,7 @@
                   <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                   <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                       <li><a href="allusers.html">All Users</a></li>
+                      <li><a href="allphotos.html">All Pictures</a></li>
                       <li><a href="#">Help</a></li>
                       <li><a href="AGB.html">AGB's</a></li>
                       <li role="separator" class="divider"></li>
