help button fore create shootout

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -109,7 +109,11 @@
                         <option> private </option>
                         <option> public</option>
                     </select>
-
+                        <button class="helpBtn5">Help
+                            <span class="helpText">Please enter the name of your new shootout. <br>
+    If you want to share this shootout with everyone select "public" below.
+    </span>
+                        </button>
                     </form>
                 </div>
                 <div class="modal-footer">
