--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>AGB</title>
-        <link rel="icon" href="./images/Herzbeben_Logo.png">
+    <title>FAQ</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>FAQ</title>
+    <link rel="icon" href="./images/Herzbeben_Logo.png">
     <!-- <link rel="stylesheet" href="compare_profile.css"> -->
-      <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- <script type=text/javascript src = "index.js"></script> -->
-        <script type=text/javascript src = "navbarFunction.js"></script>
-        <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <script type=text/javascript src = "index.js"></script> -->
+    <script type=text/javascript src = "navbarFunction.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
     <style>
         .accordion {
             background-color: #eee;
@@ -77,7 +77,7 @@
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
                             <li><a href="allphotos.html">All Pictures</a></li>
-                            <li><a href="FAQ.html">Help</a></li>
+                            <li><a href="#">Help</a></li>
                             <li><a href="AGB.html">AGB's</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Sign out</a></li>
@@ -95,10 +95,10 @@
 
 <button class="accordion">How can I create a shootout?</button>
 <div class="panel">
-    <p>To create a shootout, please click on "Compare Pictures". You will be able to compare two pictures and </p>
+    <p>To create a shootout, please click on "</p>
 </div>
 
-<button class="accordion">How does the shootout work?</button>
+<button class="accordion">AGB #2</button>
 <div class="panel">
     <p></p>
 </div>
@@ -124,7 +124,5 @@
         });
     }
 </script>
-
-
 </body>
 </html>
