--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -28,7 +28,7 @@
 <div id = "help">
 <button class="help">Help
     <span class="helpText">To sign in with your klicks-account please enter your username and password
-        into the predicted input box and click on the “Log In”-button afterwards. <br>
+        into the designated input box and click on the “Log In”-button afterwards. <br>
         If you don’t have a klicks-account, please select “Create Account” to register.
 </span>
 </button>
