--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -93,7 +93,7 @@
                             anzahlshootouts=(Object.keys(shootoutlist).length);
 
 
-                            for (var i = 0; i < anzahlshootouts; i++) {
+                            for (var i = 3; i < anzahlshootouts; i++) { //i is set to 3 because of db issue!!!
                                 var personid = shootoutlist[i].person;
                               /*  if (isNaN(personid)){
 
