--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -64,7 +64,7 @@
     <input type="file" id="file-select" name="photos[]" multiple/>
     <button type="submit" id="upload-button">Upload</button>
 </form> -->
-<button class="helpBtn">Help
+<button class="helpBtn6">Help
     <span class="helpText">Please select the Picture you want to upload and click on "Upload Picture"!</span>
 </button>
 <body>
