added AGB.html to all pages

--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -140,7 +140,7 @@ function checkNotEmpty(usernamel,passwordl) {
         <label for="confpassword">Confirm password:</label>
         <input type="password" id="confpassword" name="confpassword" placeholder="Confirm Password">
         <div id="lower2">
-            <input type="checkbox" id = "AGBcheckbox"><label for="AGBcheckbox" onclick="openAGB()">I have read the <a href="AGB.html">AGB's</a></label>
+            <input type="checkbox" id = "AGBcheckbox"><label for="AGBcheckbox" >I have read the <a onclick="openAGB()" href="">AGB's</a></label>
             <input type="submit" value="Create account" onclick="registerUser()" >
 
             <button class="helpRe">Help
