added AGB.html to all pages

--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -191,7 +191,7 @@ function checkNotEmpty(usernamel,passwordl) {
     var span = document.getElementsByClassName("close")[0];
 
     // When the user clicks on the button, open the modal
-    btn.onclick = function() {
+    btn.onclick = function openAGB() {
         modal.style.display = "block";
     }
 
