--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -104,11 +104,11 @@
                     <form>
                         <label for="nameShootout">Name</label>
                         <input type="text" id="nameShootout">
-                        <p>
-                        </p><select>
+
+                        <!--    <select>
                         <option> private </option>
-                        <option> public</option>
-                    </select>
+                         <option> public</option>
+                    </select>-->
                         <button class="helpBtn5">Help
                             <span class="helpText">Please enter the name of your new shootout. <br>
     If you want to share this shootout with everyone select "public" below.
