--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -68,8 +68,6 @@ window.onload = function () {
 };
 
 
-
-
 function checkNotEmpty(usernamel,passwordl) {
     if (usernamel === "" || usernamel === null) {
         alert('Please type in a Username!');
@@ -139,8 +137,11 @@ function checkNotEmpty(usernamel,passwordl) {
         <input type="password" id="password" name="password" placeholder="Enter Password">
         <label for="confpassword">Confirm password:</label>
         <input type="password" id="confpassword" name="confpassword" placeholder="Confirm Password">
+
         <div id="lower2">
-            <input type="checkbox" id = "AGBcheckbox"><label for="AGBcheckbox" >I have read the <a onclick="openAGB()" href="">AGB's</a></label>
+            <input type="checkbox" id="AGBcheckbox">
+            <label for="AGBcheckbox" >I have read the <a onclick="openAGB()" href="">AGB's</a></label>
+            <p id="AGBnotAccepted"  >Please accept the AGB's to register!</p>
             <input type="submit" value="Create account" onclick="registerUser()" >
 
             <button class="helpRe">Help
@@ -219,135 +220,7 @@ function checkNotEmpty(usernamel,passwordl) {
         </div>
     </div>
 </div>
-<script>
 
-    //AGB Modal
-    var modal = document.getElementById('AGBModal');
-
-    // Get the button that opens the modal
-    var btn = document.getElementById("AGBcheckbox");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks on the button, open the modal
-    btn.onclick = function openAGB() {
-        modal.style.display = "block";
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-        modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-        if (event.target == modal) {
-            modal.style.display = "none";
-        }
-    }
-
-        function registerUser() {
-            alert('register started'); //debug purpose only
-
-            // initalizing variables with textfields from html signup form
-            var email = document.getElementById("mail").value;
-            var lastname = document.getElementById("lastname").value;
-            var firstname = document.getElementById("firstname").value;
-            var username = document.getElementById("username").value;
-            var password = document.getElementById("password").value;
-            var confpw = document.getElementById("confpassword").value;
-
-            function createuser() {
-
-
-                // Check if ConfirmationPW = PW
-                if (checkPassword(confpw, password) === true) {
-                    //create hashed PW
-                    //var valpw = createvalidpw(password);
-
-                    var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
-
-                    xmlhttp.open("POST", "http://localhost:8080/meetme/api/person");
-                    xmlhttp.setRequestHeader("Content-Type", "application/json");
-                    //sent the new HttpRequest
-                    xmlhttp.send(JSON.stringify({
-                        "email": email,
-                        "password": password,
-                        "name": lastname,
-                        "firstName": firstname,
-                        "username": username
-                    }));
-
-                }
-                else {
-                    alert('signin failed');
-                }
-            }
-
-
-            function checkdataindb(email, username) {
-                var xhr = new XMLHttpRequest();
-                var json;
-                var anzahluser;
-
-                function createcookie() {
-                    var xmlhttpcookie = new XMLHttpRequest(); // new HttpRequest instance
-
-                    xmlhttpcookie.open("GET", "http://localhost:8080/meetme/api/person/username/" + username, true);
-                    xmlhttpcookie.setRequestHeader("Content-Type", "application/json");
-                    //sent the new HttpRequest
-                    xmlhttpcookie.send(null);
-                    xmlhttpcookie.onreadystatechange = function () {
-                        if (xmlhttpcookie.readyState == XMLHttpRequest.DONE) {
-                            var json = xmlhttpcookie.responseText;
-                            var userdata = JSON.parse(json);
-                            document.cookie = "id=" + userdata.id;
-                        }
-                    }
-
-                }
-
-                xhr.open('GET', 'http://localhost:8080/meetme/api/person', true);
-                xhr.send(null);
-
-                xhr.onreadystatechange = function () {
-                    if (xhr.readyState == XMLHttpRequest.DONE) {
-                        json = xhr.responseText;
-
-                        var userlist = JSON.parse(json);
-                        anzahluser = (Object.keys(userlist).length)
-
-                        var useravailable = true;
-                        for (var i = 0; i < anzahluser; i++) {
-                            if (userlist[i].email === email) {
-                                alert('Their is already an account with this Email: ' + email);
-                                window.location.replace("http://localhost:8080/index.html");
-                                return useravailable = false;
-                            }
-                            else if (userlist[i].username === username) {
-                                alert('Username ' + username + ' is already taken!');
-                                window.location.replace("http://localhost:8080/index.html");
-                                return useravailable = false;
-                            }
-                        }
-                        if (useravailable === true) {
-                            createuser();
-                            createcookie();
-
-                            window.location.replace("http://localhost:8080/compare.html");
-                        }
-                    }
-                }
-
-            }
-
-            checkdataindb(email, username);
-
-
-    }
-
-</script>
 
 
 </body>
