--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -116,11 +116,11 @@
                         var wins = JSON.parse(json);
                         wins.reverse();
                         document.getElementById('bestphoto').src = ;
-                        document.getElementById('bestpicpoints').innerText = ;
+                        document.getElementById('bestphotowins').innerText = ;
                         document.getElementById('secondphoto').src = ;
-                        document.getElementById('secondpicpoints').innerText = ;
+                        document.getElementById('secondphotowins').innerText = ;
                         document.getElementById('thirdphoto').src = ;
-                        document.getElementById('thirdpicpoints').innerText = ;
+                        document.getElementById('thirdphotowins').innerText = ;
                     }
 
                 };
