--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -3,7 +3,7 @@
 <head>
     <title>Fallstudie</title>
     <link rel="icon" href="Herzbeben_Logo.png">
-	<link rel="stylesheet" href="compare_profile.css" type="text/css">
+    <link rel="stylesheet" href="compare_profile.css" type="text/css">
     <link rel="stylesheet" href="shootout.css" type="text/css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -15,67 +15,68 @@
 </head>
 
 <body>
-  <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
+<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
     <nav role="navigation">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-<!--            <li><a href="#">Help</a></li>
-            <li class="active"><a href="#">Compare pictures <span class="sr-only">(current)</span></a></li>
- -->
-          </ul>
-          <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
-            <li><a href="compare.html">Compare Pictures</a></li>
-            <li><a href="profile.html">Profile</a></li>
-              <li class="dropdown">
-                  <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-                  <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                      <li><a href="allusers.html">All Users</a></li>
-                      <li><a href="allphotos.html">All Pictures</a></li>
-                      <li><a href="#">Help</a></li>
-                      <li><a href="AGB.html">AGB's</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Sign out</a></li>
-                  </ul>
-              </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    </header>
 
-    <div id="ShootoutÜbersicht">
-        <h2 id="caption">Take a look at a shootout!</h2>
-        <div class="form-group" id="search_shootout">
-            <input  type="text" class="form-control" placeholder="Search">
-        </div >
-        <table id = "result" align="center">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!--            <li><a href="#">Help</a></li>
+                                <li class="active"><a href="#">Compare pictures <span class="sr-only">(current)</span></a></li>
+                     -->
+                </ul>
+                <form class="navbar-form navbar-left">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
+                    <li><a href="compare.html">Compare Pictures</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li class="dropdown">
+                        <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                        <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="allusers.html">All Users</a></li>
+                            <li><a href="allphotos.html">All Pictures</a></li>
+                            <li><a href="#">Help</a></li>
+                            <li><a href="AGB.html">AGB's</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Sign out</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+</header>
+
+<div id="ShootoutÜbersicht">
+    <h2 id="caption">Take a look at a shootout!</h2>
+    <div class="form-group" id="search_shootout">
+        <input  type="text" id="searchShootout" class="form-control" placeholder="Search for shootouts" onkeyup="searchShootout()">
+    </div>
+
+    <table id = "result" align="center">
         <tr>
             <th id="spalte">Shootout-Name</th>
             <th id="spalte">User</th>
             <th id="spalte">Top ranked pictures</th>
         </tr>
 
-            <script>
+        <script>
                 window.onload = function () {
 
                     var xhr = new XMLHttpRequest();
@@ -90,23 +91,24 @@
                         if (xhr.readyState == XMLHttpRequest.DONE) {
                             json = xhr.responseText;
                             var shootoutlist = JSON.parse(json);
-                            anzahlshootouts=(Object.keys(shootoutlist).length);
+                            var anzahlshootouts=(Object.keys(shootoutlist).length);
+                            var shootouttable = document.getElementById("table");
 
 
                             for (var i = 3; i < anzahlshootouts; i++) { //i is set to 3 because of db issue!!!
                                 var personid = shootoutlist[i].person;
-                              /*  if (isNaN(personid)){
+                                                        /*  if (isNaN(personid)){
 
-                                }else {
+                                                        }else {
 
 
-                                var xhrperson = new XMLHttpRequest();
-                                xhrperson.open('GET', 'http://localhost:8080/meetme/api/person/' + personid, true);
-                                xhrperson.send(null);
-                                xhr.onreadystatechange = function () {
-                                    if (xhrperson.readyState == XMLHttpRequest.DONE) {
-                                        json = xhrperson.responseText;
-                                        var person = JSON.parse(json);*/
+                                                        var xhrperson = new XMLHttpRequest();
+                                                        xhrperson.open('GET', 'http://localhost:8080/meetme/api/person/' + personid, true);
+                                                        xhrperson.send(null);
+                                                        xhr.onreadystatechange = function () {
+                                                            if (xhrperson.readyState == XMLHttpRequest.DONE) {
+                                                                json = xhrperson.responseText;
+                                                                var person = JSON.parse(json);*/
 
 
                                 result.innerHTML += "<tr> " +
@@ -120,18 +122,36 @@
 
                     };
 
-
-
             </script>
-        </table>
-    </div>
-  <!--creates Help button-->
-  <div id = "helpBtn4">
-      <button class="helpBtn4">Help
-          <span class="helpText">To see the picture ranking of a selected shootout click on "Picture Ranking".
+    </table>
+
+    <script>
+        function searchShootout() {
+            var input, filter, table, tr, td, i;
+            input = document.getElementById("searchShootout");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("result");
+            tr = table.getElementsByTagName("tr");
+                for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[0];
+                    if (td) {
+                        if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                        } else {
+                        tr[i].style.display = "none";
+                        }
+                    }
+                }
+        }
+        </script>
+</div>
+<!--creates Help button-->
+<div id = "helpBtn4">
+    <button class="helpBtn4">Help
+        <span class="helpText">To see the picture ranking of a selected shootout click on "Picture Ranking".
        </span>
-      </button>
-  </div>
+    </button>
+</div>
 
 </body>
 </html>
