--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script type=text/javascript src = "navbarFunction.js"></script>
     <script type=text/javascript src = "compare.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
     <!--  <script src="jquery-3.3.1.min.js"></script> -->
   </head>
@@ -117,69 +118,25 @@
         </div>
 
         <script>
-            //Ausgabe der Liste aller Shootouts in der Sidebar
+        function cookiewerteHolen () {
+        var Wert = "";
+        if (document.cookie) {
+        var Wertstart = document.cookie.indexOf("=") + 1;
+        var Wertende = document.cookie.indexOf(";");
+        if (Wertende == -1) {
+        Wertende = document.cookie.length;
+        }
+        Wert = document.cookie.substring(Wertstart, Wertende);
+        }
+        return Wert;
+        }
+        // Get the modal
+        var modal = document.getElementById('myModal');
 
-            window.onload = function () {
+        // Get the button that opens the modal
+        var btn = document.getElementById("create_shootout");
 
-                if (document.cookie === ""){
-                    window.location.replace("http://localhost:8080/index.html");
-                }
-
-                //starttheshow();
-                createshootoutlist();
-            };
-
-function createshootoutlist() {
-
-                var xmlhttpsidebar = new XMLHttpRequest ();
-                xmlhttpsidebar.open("GET", 'http://localhost:8080/meetme/api/shootout/', true);
-                xmlhttpsidebar.setRequestHeader("Content-Type", "application/json"); //?
-                xmlhttpsidebar.send(null);
-                xmlhttpsidebar.onreadystatechange = function (){
-                    if(xmlhttpsidebar.readyState == XMLHttpRequest.DONE){
-
-                        var json = xmlhttpsidebar.responseText;
-                        var shootoutData = JSON.parse(json);
-                        alert(shootoutData[0].name);
-                        var anzahlShootouts=(Object.keys(shootoutData).length);
-                        var shootouttable = document.getElementById("shootoutlist");
-                        for (var i = 0; i < anzahlShootouts; i++){
-                           var pid = shootoutData[i].person;
-                           var shootoutid = shootoutData[i].id;
-                            shootouttable.innerHTML +=
-                                "<tr>" +
-                                "<li>" + "<a href ='#' id='"+shootoutData[i].id+"' onclick='starttheshow("+pid+","+shootoutid+")' />" + shootoutData[i].name + "</a>"+ "</li>" +
-                                "</tr>";
-
-                        }
-                    }
-                }
-                }
-
-
-
-
-
-
-            function cookiewerteHolen () {
-                var Wert = "";
-                if (document.cookie) {
-                    var Wertstart = document.cookie.indexOf("=") + 1;
-                    var Wertende = document.cookie.indexOf(";");
-                    if (Wertende == -1) {
-                        Wertende = document.cookie.length;
-                    }
-                    Wert = document.cookie.substring(Wertstart, Wertende);
-                }
-                return Wert;
-            }
-            // Get the modal
-            var modal = document.getElementById('myModal');
-
-            // Get the button that opens the modal
-            var btn = document.getElementById("create_shootout");
-
-            // Get the <span> element that closes the modal
+        // Get the <span> element that closes the modal
             var span = document.getElementsByClassName("close")[0];
 
             // When the user clicks on the button, open the modal
@@ -232,10 +189,7 @@ function createshootoutlist() {
 
             }
 
-
-
-        </script>
-
+            </script>
 
 
         <!-- Seitenüberschrift-->
@@ -265,131 +219,6 @@ function createshootoutlist() {
 </div>
 <!--/row-->
 
-  <script>
-
-      //--------------------------------------------------------
-//alt="no picture uploaded"
-var photos;
-function starttheshow (personID, shootoutID){
-    // Fisher-Yates shuffle algorithm
-    function shuffle(array) {
-        var currentIndex = array.length, temporaryValue, randomIndex;
-
-        // While there remain elements to shuffle...
-        while (0 !== currentIndex) {
-
-            // Pick a remaining element...
-            randomIndex = Math.floor(Math.random() * currentIndex);
-            currentIndex -= 1;
-
-            // And swap it with the current element.
-            temporaryValue = array[currentIndex];
-            array[currentIndex] = array[randomIndex];
-            array[randomIndex] = temporaryValue;
-        }
-        return array;
-    }
-
-    /*var userID;
-    userID = cookiewerteHolen();
-    if (userID === "") {
-        alert('undefined User!');
-    }*/
-
-    var xmlhttpr = new XMLHttpRequest();
-    xmlhttpr.open("GET", "http://localhost:8080/meetme/api/photo/" + personID);
-    xmlhttpr.send(null);
-
-    xmlhttpr.onreadystatechange = function () {
-        if (xmlhttpr.readyState == XMLHttpRequest.DONE) {
-            var json = xmlhttpr.responseText;
-            photos = JSON.parse(json);
-            photos = shuffle(photos);
-            //var picamount = (Object.keys(photos).length);
-            // alert (pictureNumber);
-            // alert(photo[0].title);
-
-            // ------ load fist pic for image1 ---------------------
-            document.getElementById("image1").src = photos[0].picture;
-            document.getElementById("image1").title = photos[0].id;
-            photos.shift();
-            // ------ load fist pic for image2 --------------------
-            var lastpic = (Object.keys(photos).length) - 1;
-            document.getElementById("image2").src = photos[lastpic].picture;
-            document.getElementById("image2").title = photos[lastpic].id;
-            photos.pop();
-        }
-    };
-   // changepic1(); //set first Pic on page
-   // changepic2(); //set first Pic on page
-}
-
-    var clicks = 0;
-
-    function changepic1() { //bild 2 geclickt
-        clicks++;
-        alert (Object.keys(photos).length);
-        var arraylength = (Object.keys(photos).length);
-        if (arraylength !== 0) {
-            document.getElementById("image1").src = photos[0].picture;
-            document.getElementById("image1").title = photos[0].id;
-            photos.shift();
-            var pic2ID = document.getElementById("image2").title;
-
-            alert('photos left: ' + (Object.keys(photos).length + 1) + ' Anzahl clicks für pic2: ' + clicks);
-            var xmlhttppoints = new XMLHttpRequest();
-           /* xmlhttppoints.open("PUT", "http://localhost:8080/meetme/api/rank/points/" + clicks +"&"+ shootoutID + "&" + pic2ID);
-            xmlhttppoints.setRequestHeader("Content-Type", "application/json");
-            //sent the new HttpRequest
-            xmlhttppoints.send();*/
-        }
-        else { //Keine Bilder mehr in Array!
-            alert('photos left: ' + (Object.keys(photos).length) + ' Anzahl clicks für pic2: ' + clicks);
-            document.getElementById("image1").onclick = '';
-            document.getElementById("image2").onclick = '';
-            alert('no pics left!');
-            //gewinner ist bild 2
-            var picID = document.getElementById("image2").title;
-            var xmlhttp = new XMLHttpRequest();
-            xmlhttp.open("PUT", "http://localhost:8080/meetme/api/photo/wins/" + picID);
-            xmlhttp.setRequestHeader("Content-Type", "application/json");
-            //sent the new HttpRequest
-            xmlhttp.send();
-        }
-    }
-
-    function changepic2() { //bild 1 geklickt
-        clicks++;
-        var arraylength = (Object.keys(photos).length);
-        if (arraylength !== 0) {
-            var lastpic = (Object.keys(photos).length) - 1;
-            document.getElementById("image2").src = photos[lastpic].picture;
-            document.getElementById("image2").title = photos[lastpic].id;
-            photos.pop();
-            alert('photos left: ' + (Object.keys(photos).length + 1) + ' Anzahl clicks für pic1: ' + clicks);
-        }
-        else {  //Keine Bilder mehr in Array!
-            alert('photos left: ' + (Object.keys(photos).length) + ' Anzahl clicks für pic1: ' + clicks);
-            document.getElementById("image1").onclick = '';
-            document.getElementById("image2").onclick = '';
-            alert('no pics left!');
-            //gewinner ist bild 1
-
-            var photoid = document.getElementById("image1").title;
-            var xmlhttp = new XMLHttpRequest();
-            xmlhttp.open("PUT", "http://localhost:8080/meetme/api/photo/wins/" + photoid);
-            xmlhttp.setRequestHeader("Content-Type", "application/json");
-            //sent the new HttpRequest
-            xmlhttp.send();
-        }
-    }
-
-
-
-
-      //---------------------------------------------------
-  </script>
-
 <!--Help button-->
 <button class="helpBtn1">Help
     <span class="helpText">Please click on the picture you like more to participate in this shootout. <br>
@@ -398,9 +227,6 @@ function starttheshow (personID, shootoutID){
     </span>
 </button>
 
-    <!-- JavaScript for top navbar -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-    </script>
 
 
 
